examples/test/testpolicy1899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1899
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key12: value35
      key29: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
          key42: value33
      podSelector:
        matchLabels:
          key3: value20
          key15: value31
